add more sections

--- a/css/style.css
+++ b/css/style.css
@@ -252,6 +252,7 @@ body {
 .subscribe p {
   margin-bottom: 30px;
 }
+
 .statistics {
   background: url("../assets/stats.jpg") no-repeat center center fixed;
   background-size: cover;
@@ -282,4 +283,29 @@ body {
 
 .statistics .data span {
   font-size: 16px;
+}
+.our-skills {
+  padding-top: 40px;
+  padding-bottom: 60px;
+}
+.our-skills .skills-progress {
+  margin-bottom: 50px;
+}
+
+.our-skills h2 {
+  margin-bottom: 60px;
+  font-weight: bold;
+}
+.our-skills h3 {
+  font-weight: bold;
+  margin-top: 0;
+}
+.our-skills .progress {
+  height: 25px;
+}
+.our-skills .progress-bar {
+  line-height: 25px;
+  font-size: 14px;
+  text-align: left;
+  text-indent: 5px;
 }
