--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,8 @@
+@import url("https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap");
 body {
   margin-top: 50px;
+
+  font-family: "Ubuntu", sans-serif;
 }
 /* Start Overridding bootstrap */
 .navbar-inverse .navbar-nav > .active > a,
