--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@ body {
   margin-top: 50px;
 
   font-family: "Ubuntu", sans-serif;
+  overflow: hidden;
 }
 .option-box {
   position: fixed;
@@ -23,9 +24,10 @@ body {
 .option-box .color-option li {
   width: 20px;
   height: 20px;
-  background: #f00;
+  /* background: #f00; */
   display: inline-block;
   margin-right: 3px;
+  cursor: pointer;
 }
 .option-box .gear-check {
   cursor: pointer;
@@ -453,3 +455,65 @@ body {
 .footer .copyright span {
   color: #0895d1;
 }
+/* Start Section Loading */
+
+.loading-overlay {
+  background: #222;
+  color: #fff;
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 99999;
+}
+
+.spinner {
+  width: 60px;
+  height: 60px;
+  position: relative;
+  margin: 300px auto;
+}
+
+.double-bounce1,
+.double-bounce2 {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  background-color: #fff;
+  opacity: 0.6;
+  position: absolute;
+  top: 0;
+  left: 0;
+  -webkit-animation: bounce 2s infinite ease-in-out;
+  animation: bounce 2s infinite ease-in-out;
+}
+
+.double-bounce2 {
+  -webkit-animation-delay: -1s;
+  animation-delay: -1s;
+}
+
+@-webkit-keyframes bounce {
+  0%,
+  100% {
+    -webkit-transform: scale(0);
+  }
+  50% {
+    -webkit-transform: scale(1);
+  }
+}
+
+@keyframes bounce {
+  0%,
+  100% {
+    transform: scale(0);
+    -webkit-transform: scale(0);
+  }
+  50% {
+    transform: scale(1);
+    -webkit-transform: scale(1);
+  }
+}
+
+/* End Section Loading */
